--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
@@ -21,22 +22,33 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angular-bootstrap-md": "^5.2.3",
-    "chart.js": "^2.7.2",
+    "angular-bootstrap-md": "^4.3.5",
+    "angular2-fullcalendar": "^1.0.19",
+    "angular2-jwt": "^0.2.3",
+    "angular2-tinymce": "^2.1.2",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^3.6.1",
     "hammerjs": "^2.0.8",
+    "mydatepicker": "^2.6.3",
+    "ng-fullcalendar": "^1.5.5",
+    "ng2-ckeditor": "^1.1.9",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-pagination": "^2.0.2",
+    "ng2-tinymce": "^1.0.21",
+    "ng2-tinymce-alt": "0.0.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
+    "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -47,7 +59,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
   }
 }
